[FE] Re-aligned elements, title fix [rev: none]
- Re-aligned the my songs table heading and the create jingle button
- Quotes removed from dashboard title
- Added a redirect to the home page when the user isn't signed in
(commented out for now)

--- a/src/public/css/dashboard/dashboard.css
+++ b/src/public/css/dashboard/dashboard.css
@@ -15,5 +15,6 @@
 }
 #createjinglebutton{
 	display: inline-block;
+	vertical-align:top;
 	float: right;
 }
